--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_GOOGLE_ANALYTICS=G-EN3DGVK6ZR
-NEXT_PUBLIC_DOMAIN=https://s1522711.github.io/Discord-Package
+NEXT_PUBLIC_DOMAIN=https://package.retardhub.net/
